# olx-monitor

./: .gitignore  anuncios.db  debug.html  notifier.py  pyproject.toml  scheduler.py  scrapper.py  storage.py  test_bot.py
src/scrapper_app/: config.py  main.py
src/scrapper_app/db/: storage.py
src/scrapper_app/notifier/: notifier.py
src/scrapper_app/notify/: notifier.py
src/scrapper_app/schedule/: scheduler.py
src/scrapper_app/scheduler/: scheduler.py
src/scrapper_app/scrap/: scrapper.py
src/scrapper_app/scrapper/: browser.py  models.py  parser.py  scrapper.py  utils.py
