[project]
name = "scrapper-app"
version = "0.1.0"
description = ""
authors = [
    {name = "ffelipealves123",email = "felipe.alves0850@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "playwright-stealth (>=2.0.2,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "python-telegram-bot (>=22.7,<23.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "scrapper_app", from = "src"}]

[tool.poetry.scripts]
olx-monitor = "scrapper_app.scheduler.scheduler:main"
